src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  @apply transition-colors duration-100 dark:bg-gray-900
}

.input {
  @apply border my-3 p-2 rounded border-purple-500 active:border-purple-500 focus:border-purple-500 dark:bg-gray-800 dark:text-gray-300 dark:border-2 active:dark:bg-gray-800
}

.li {
  @apply py-3 text-gray-700
}

#title {
  @apply font-semibold
}

.hover-effect {
  @apply transition duration-300 ease-out;
}

